# LoL_stats

./: .env.example  README.md  pyproject.toml  serve_docs.py
.github/workflows/: deploy-pages.yml
config/: players.example.json  players.json
docs/: app.js  index.html  styles.css
docs/data/: stats.json
src/lol_stats/: __init__.py  __main__.py  generate.py  storage.py
src/lol_stats_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_generate.py  test_storage.py
