[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-stats-dashboard"
version = "0.1.0"
description = "Static League of Legends stats dashboard powered by Riot API and GitHub Pages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
]

[project.scripts]
lol-stats = "lol_stats.generate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

